grammar.js
    source_file: $ => repeat(seq(
      choice(
        $.set_operation,
        $.select_statement,
        $.create_table_statement,
        $.create_view_statement,
        $.create_function_statement,
        $.drop_table_statement,
        $.drop_view_statement,
        $.insert_statement,
        $.update_statement,
        $.delete_statement,
        $.merge_statement,
        $.declare_statement,
        $.set_statement,
        $.begin_end_block
      ),
      optional(';')
    )),

    select_statement: $ => seq(
      optional($.with_clause),
      $.select_clause,
      optional($.from_clause),
      optional($.where_clause),
      optional($.group_by_clause),
      optional($.having_clause),
      optional($.qualify_clause),
      optional($.window_clause),
      optional($.order_by_clause),
      optional($.limit_clause),
      optional($.offset_clause)
    ),

    select_clause: $ => seq(
      kw('SELECT'),
      optional(choice(kw('DISTINCT'), kw('ALL'))),
      prec.right(
        seq(
          $.select_item,
          repeat(seq(',', $.select_item)),
          optional(',') // Allow trailing comma
        )
      )
    ),

    select_item: $ => prec.right(0, choice(
      $.alias,
      $.star,
      $._expression
    )),

    from_clause: $ => seq(
      kw('FROM'),
      $._table_expression
    ),

    _table_expression: $ => choice(
      $.join_expression,
      $.table_alias,
      $.subquery,
      $.unnest_expression,
      $.pivot_expression,
      $.unpivot_expression,
      $.qualified_table_name,
      $.backtick_identifier,
      $.identifier
    ),

    // Stage 2: WHERE clause and expressions
    where_clause: $ => seq(
      kw('WHERE'),
      $._expression
    ),

    _expression: $ => optionalParenthesis(choice(
      $.binary_expression,
      $.unary_expression,
      $.in_expression,
      $.exists_expression,
      $.between_expression,
      $.is_null_expression,
      $.case_expression,
      $.cast_expression,
      $.window_function,
      $.function_call,
      $.array_access,
      $.field_access,
      $.subquery,
      $.array_literal,
      $.struct_literal,
      $.interval_literal,
      $.parameter_marker,
      $.system_variable,
      $.backtick_identifier,
      $.identifier,
      $.number_literal,
      $.string_literal,
      $.boolean_literal
    )),

    // Binary expressions with precedence
    // OR has lowest precedence
    binary_expression: $ => choice(
      prec.left(1, seq(
        field('left', $._expression),
        kw('OR'),
        field('right', $._expression)
      )),
      // AND has higher precedence than OR
      prec.left(2, seq(
        field('left', $._expression),
        kw('AND'),
        field('right', $._expression)
      )),
      // Comparison operators and LIKE have higher precedence than AND/OR
      prec.left(3, seq(
        field('left', $._expression),
        choice('=', '!=', '<', '>', '<=', '>=', kw('LIKE')),
        field('right', $._expression)
      )),
      // Addition and subtraction
      prec.left(5, seq(
        field('left', $._expression),
        choice('+', '-'),
        field('right', $._expression)
      )),
      // Multiplication, division, and modulo have highest precedence
      prec.left(6, seq(
        field('left', $._expression),
        choice('*', '/', '%'),
        field('right', $._expression)
      ))
    ),

    // Unary expression (NOT)
    function_call: $ => prec(7, seq(
      field('name', $.identifier),
      '(',
      field('arguments', optional(choice(
        $.star,
        commaSep1($._expression)
      ))),
      ')'
    )),

    alias: $ => seq(
      $._expression,
      kw('AS'),
      field('alias', $.identifier)
    ),

    group_by_clause: $ => seq(
      kw('GROUP'),
      kw('BY'),
      commaSep1($._expression)
    ),

    order_by_clause: $ => seq(
      kw('ORDER'),
      kw('BY'),
      commaSep1($.order_item)
    ),

    order_item: $ => seq(
      $._expression,
      optional(choice(kw('ASC'), kw('DESC')))
    ),

    join_expression: $ => prec.left(seq(
      field('left', $._table_expression),
      choice(
        seq(kw('INNER'), kw('JOIN')),
        seq(kw('LEFT'), optional(kw('OUTER')), kw('JOIN')),
        seq(kw('RIGHT'), optional(kw('OUTER')), kw('JOIN')),
        seq(kw('FULL'), optional(kw('OUTER')), kw('JOIN')),
        seq(kw('CROSS'), kw('JOIN')),
        kw('JOIN')
      ),
      field('right', $._table_expression),
      optional($.on_clause)
    )),

    on_clause: $ => seq(
      kw('ON'),
      $._expression
    ),

    table_alias: $ => seq(
      field('table', choice(
        $.identifier,
        $.backtick_identifier,
        $.subquery,
        $.unnest_expression,
        $.qualified_table_name
      )),
      optional(kw('AS')),
      field('alias', $.identifier)
    ),

    field_access: $ => prec.left(seq(
      field('object', choice(
        $.identifier,
        $.backtick_identifier,
        $.field_access,
        $.array_access
      )),
      '.',
      field('field', choice(
        $.identifier,
        $.backtick_identifier
      ))
    )),

    // Array element access with brackets
    subquery: $ => seq(
      '(',
      $.select_statement,
      ')'
    ),

    with_clause: $ => seq(
      kw('WITH'),
      commaSep1($.cte)
    ),

    cte: $ => seq(
      field('name', $.identifier),
      kw('AS'),
      '(',
      $.select_statement,
      ')'
    ),

    in_expression: $ => seq(
      $._expression,
      kw('IN'),
      choice(
        $.subquery,
        seq('(', commaSep1($._expression), ')')
      )
    ),

    exists_expression: $ => seq(
      kw('EXISTS'),
      $.subquery
    ),

    // Stage 6: BigQuery-specific types and syntax
    unpivot_expression: $ => seq(
      field('input', choice(
        $.subquery,
        $.qualified_table_name,
        $.backtick_identifier,
        $.identifier
      )),
      kw('UNPIVOT'),
      '(',
      $.identifier,
      kw('FOR'),
      $.identifier,
      kw('IN'),
      '(',
      commaSep1($.identifier),
      ')',
      ')'
    ),

    qualified_table_name: $ => seq(
      choice($.identifier, $.backtick_identifier),
      '.',
      choice(
        // project.dataset.table or project.dataset.table_*
        seq(
          $.identifier,
          '.',
          choice($.identifier, $.table_name_with_wildcard)
        ),
        // dataset.table or dataset.table_*
        choice($.identifier, $.table_name_with_wildcard)
      )
    ),

    // Table name with wildcard suffix
    window_function: $ => prec(8, seq(
      field('name', $.identifier),
      '(',
      optional(choice(
        field('arguments', $.star),
        field('arguments', commaSep1($._expression))
      )),
      ')',
      $.over_clause
    )),

    over_clause: $ => seq(
      kw('OVER'),
      choice(
        // Named window reference
        field('window_name', $.identifier),
        // Inline window specification
        seq(
          '(',
          optional($.partition_by_clause),
          optional($.order_by_clause),
          optional($.frame_clause),
          ')'
        )
      )
    ),

    partition_by_clause: $ => seq(
      kw('PARTITION'),
      kw('BY'),
      commaSep1($._expression)
    ),

    frame_clause: $ => seq(
      choice(kw('ROWS'), kw('RANGE')),
      kw('BETWEEN'),
      field('start', $.frame_bound),
      kw('AND'),
      field('end', $.frame_bound)
    ),

    frame_bound: $ => choice(
      seq(kw('UNBOUNDED'), choice(kw('PRECEDING'), kw('FOLLOWING'))),
      seq($.number_literal, choice(kw('PRECEDING'), kw('FOLLOWING'))),
      seq(kw('CURRENT'), kw('ROW'))
    ),

    // WINDOW clause for named window definitions
    create_table_statement: $ => seq(
      kw('CREATE'),
      optional(seq(kw('OR'), kw('REPLACE'))),
      kw('TABLE'),
      field('name', choice(
        $.qualified_table_name,
        $.backtick_identifier,
        $.identifier
      )),
      choice(
        seq(
          '(',
          $.column_definitions,
          ')'
        ),
        seq(
          kw('AS'),
          $.select_statement
        )
      )
    ),

    create_view_statement: $ => seq(
      kw('CREATE'),
      optional(seq(kw('OR'), kw('REPLACE'))),
      kw('VIEW'),
      field('name', choice(
        $.qualified_table_name,
        $.backtick_identifier,
        $.identifier
      )),
      kw('AS'),
      $.select_statement
    ),

    drop_table_statement: $ => seq(
      kw('DROP'),
      kw('TABLE'),
      optional(seq(kw('IF'), kw('EXISTS'))),
      field('name', choice(
        $.qualified_table_name,
        $.backtick_identifier,
        $.identifier
      ))
    ),

    drop_view_statement: $ => seq(
      kw('DROP'),
      kw('VIEW'),
      optional(seq(kw('IF'), kw('EXISTS'))),
      field('name', choice(
        $.qualified_table_name,
        $.backtick_identifier,
        $.identifier
      ))
    ),

    column_definitions: $ => commaSep1($.column_definition),

    column_definition: $ => seq(
      field('name', $.identifier),
      field('type', $.type)
    ),

    type: $ => choice(
      // Simple types
      kw('INT64'),
      kw('FLOAT64'),
      kw('STRING'),
      kw('BOOL'),
      kw('BYTES'),
      kw('DATE'),
      kw('DATETIME'),
      kw('TIME'),
      kw('TIMESTAMP'),
      // Complex types (simplified for now)
      seq(kw('ARRAY'), '<', $.type, '>'),
      seq(kw('STRUCT'), '<', commaSep1($.struct_type_field), '>'),
      // Generic identifier for custom types
      $.identifier
    ),

    star: $ => '*',

    // INTERVAL literals
    number_literal: $ => /\d+/,

    boolean_literal: $ => choice(
      kw('TRUE'),
      kw('FALSE')
    ),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // Parameter marker (@param_name)
